--- a/styles.css
+++ b/styles.css
@@ -2,12 +2,69 @@ body {
 /*    font-family: "Open Sans", Arial, "Helvetica Neue", Helvetica, sans-serif;*/
 /*    font-size: 90%;*/
     line-height: 150%;
+/*    margin: 0;*/
    
 }
+.container { 
+    width: 900px;
+    margin-left: auto;
+    margin-right: auto;
+    
+}
+
+.header { 
+    width: 900px;
+    margin-right: auto;
+    margin-left: auto;
+    font-size: 150%;
+    font-weight: 700;
+    clear: both;
+    display: inline-block;
+    padding: 20px 0 40px;;
+}
+
+.console { 
+    position: fixed; 
+    z-index: 500;
+    bottom: 10px;
+    height: 50px;
+    background: #000;
+    color: #fff;
+    font-weight: 100;
+    width: 900px;
+    padding: 10px;
+    text-transform: lowercase;
+    font-family: "Roboto Mono", monospace, "Helvetica Neue", Helvetica, sans-serif;
+    font-size: 70%;
+    font-weight: 300;
+    color: greenyellow;
+    
+}
+
+.console-wrap { 
+    
+    position: fixed; 
+    bottom: 10px;
+    height: 70px;
+    background: #000;
+    width: 98.7%;
+
+}
+
+.top-left { 
+    width: 300px;
+}
+
+.totals { 
+    font-size: 130%;
+    font-weight: 700;
+    margin-bottom: 30px;
+}
+
+
 
 .section-head { 
     font-weight: 700;
-    width: 300px;
     border-bottom: solid 1px gray;
     padding-bottom: 10px;
     margin-bottom: 10px;
