--- a/styles.css
+++ b/styles.css
@@ -33,11 +33,12 @@ body {
     font-weight: 100;
     width: 900px;
     padding: 10px;
+    padding-left: 0;
     text-transform: lowercase;
     font-family: "Roboto Mono", monospace, "Helvetica Neue", Helvetica, sans-serif;
     font-size: 70%;
     font-weight: 300;
-    color: greenyellow;
+    color: white;
     
 }
 
